// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSearch component should render 1`] = `
<DocumentFragment>
  <form
    class="main-search"
    data-testid="main-search-form"
    style="--main-button-color: #00639a;"
  >
    <input
      aria-label="Text query"
      class="main-search__input"
      data-testid="main-search-input"
      type="text"
      value=""
    />
    <button
      class="button primary"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;

exports[`MainSearch component should render with namespaces selector 1`] = `
<DocumentFragment>
  <form
    class="main-search"
    data-testid="main-search-form"
    style="--main-button-color: #00639a;"
  >
    <div
      class="dropdown-container"
    >
      <button
        class="button primary dropdown"
        type="button"
      >
        One
      </button>
      <div
        class="dropdown-menu"
      />
    </div>
    <input
      aria-label="Text query in one"
      class="main-search__input"
      data-testid="main-search-input"
      type="text"
      value=""
    />
    <button
      class="button primary"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;
